# tick

./: setup.py
doc/: index.rst
doc/modules/: api.rst  dataset.rst  dev.rst  hawkes.rst  inference.rst  linear_model.rst  optim.rst  plot.rst  preprocessing.rst  prox.rst  robust.rst  simulation.rst  solver.rst  survival.rst
doc/modules/code_samples/: plot_grad_coeff0.py  plot_hawkes_1d_simu.py  plot_hawkes_kernels.py  plot_hawkes_matrix_exp_kernels.py  plot_hawkes_multidim_simu.py  plot_hawkes_sum_exp_kernels.py  plot_losses_classification.py  plot_losses_count_data.py  plot_losses_regression.py  plot_poisson_constant_intensity.py  plot_solver_comparison.py
examples/: plot_robust_linear_regression.py
lib/cpp-test/hawkes/model/: CMakeLists.txt  hawkes_models_gtest.cpp
lib/cpp-test/hawkes/simulation/: CMakeLists.txt  hawkes_simulation.cpp
lib/cpp/array/: CMakeLists.txt
lib/cpp/hawkes/inference/: CMakeLists.txt  hawkes_adm4.cpp
lib/cpp/hawkes/model/: CMakeLists.txt  model_hawkes_expkern_leastsq_single.cpp  model_hawkes_expkern_loglik_single.cpp  model_hawkes_sumexpkern_leastsq_single.cpp  model_hawkes_sumexpkern_loglik_single.cpp  model_hawkes_utils.cpp
lib/cpp/hawkes/model/base/: model_hawkes.cpp  model_hawkes_leastsq.cpp  model_hawkes_list.cpp  model_hawkes_loglik.cpp  model_hawkes_loglik_single.cpp
lib/cpp/hawkes/model/list_of_realizations/: model_hawkes_expkern_leastsq.cpp  model_hawkes_expkern_loglik.cpp  model_hawkes_sumexpkern_leastsq.cpp  model_hawkes_sumexpkern_loglik.cpp
lib/cpp/hawkes/simulation/: CMakeLists.txt  simu_hawkes.cpp  simu_inhomogeneous_poisson.cpp  simu_point_process.cpp  simu_poisson_process.cpp
lib/include/tick/inference/: hawkes_non_param_cumulant.h
lib/src/cpp/inference/: CMakeLists.txt  hawkes_non_param_cumulant.cpp
lib/src/swig/inference/: hawkes_non_param_cumulant.i  inference_module.i
lib/swig/hawkes/inference/: hawkes_inference_module.i
lib/swig/hawkes/model/: hawkes_model_module.i
lib/swig/hawkes/simulation/: hawkes_simulation_module.i  point_process.i
sh/: configure_env.sh
tick/hawkes/: __init__.py
tick/hawkes/inference/: hawkes_adm4.py  hawkes_basis_kernels.py  hawkes_conditional_law.py  hawkes_em.py  hawkes_expkern_fixeddecay.py  hawkes_sumexpkern_fixeddecay.py  hawkes_sumgaussians.py
tick/hawkes/inference/base/: learner_hawkes_param.py
tick/hawkes/inference/tests/: hawkes_adm4_test.py  hawkes_em_test.py  hawkes_expkern_test.py  hawkes_sumexpkern_test.py
tick/hawkes/model/: __init__.py  model_hawkes_expkern_leastsq.py  model_hawkes_expkern_loglik.py  model_hawkes_sumexpkern_leastsq.py  model_hawkes_sumexpkern_loglik.py
tick/hawkes/model/base/: model_hawkes.py
tick/hawkes/model/tests/: model_hawkes_expkern_leastsq_test.py  model_hawkes_expkern_loglik_test.py  model_hawkes_sumexpkern_leastsq_test.py  model_hawkes_sumexpkern_loglik_test.py
tick/hawkes/simulation/: __init__.py  hawkes.py  simu_hawkes.py  simu_hawkes_exp_kernels.py  simu_hawkes_multi.py  simu_hawkes_sumexp_kernels.py  simu_inhomogeneous_poisson.py  simu_poisson_process.py
tick/hawkes/simulation/base/: __init__.py  simu_point_process.py
tick/hawkes/simulation/hawkes_kernels/: hawkes_kernel_0.py  hawkes_kernel_exp.py  hawkes_kernel_power_law.py  hawkes_kernel_sum_exp.py  hawkes_kernel_time_func.py
tick/inference/: __init__.py  hawkes_non_param_cumulant.py
tick/inference/nphc/: cumulants.py  main.py
tick/inference/tests/: hawkes_non_param_cumulant_test.py
tick/plot/tests/: plot_hawkes_test.py
tick/simulation/: sccs.py
tick/solver/tests/: scpg_test.py
tick/survival/: simu_sccs.py
(+40 files in other folders)
